--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
     <form>
       <label>Full Name</label>
-      <input type="text" placeholder="Natinael Abebe" required />
+      <input type="text" placeholder="" required />
 
       <label>Email Address</label>
       <input type="email" placeholder="you@email.com" required />
