--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" /> /. my name is king./
+  <meta name="viewport" content="width=device-width, initial-scale=1" 
   <title>Join TechPathHabesha</title>
 
   <style>
