Clear title and placeholder in index.html
Updated the title and placeholder for the full name input.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" 
-  <title>Join TechPathHabesha</title>
+  <title></title>
 
   <style>
     body { margin: 0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; background: #fff; color: #111; }
@@ -34,7 +34,7 @@
 
     <form id="joinForm">
       <label>Full Name</label>
-      <input id="fullName" type="text" placeholder="Natinael Abebe" required />
+      <input id="fullName" type="text" placeholder="" required />
 
       <label>Email Address</label>
       <input id="email" type="email" placeholder="you@email.com" required />
